# oni-tech.github.io

./: .envrc  .gitignore  .gitmodules  CNAME  LICENSE  README.md  TAGS  about.html  about.markdown  atom.xml  cabal.sandbox.config  index.html  mafia  oni-tech.cabal  oni-tech.lock-8.2.2  rss.xml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
blog/2009/05/23/acer-aspire-one-with-netbsd-50/: index.html
css/: style.css  syntax.css  theme.css
main/: site.hs
posts/: 2009-05-23-acer-aspire-one-with-netbsd-50.html  2009-05-23-acer-aspire-one-with-netbsd-50.md  2015-08-23-example.html  2015-08-23-example.markdown  2021-01-13-ocaml.html  2021-01-13-ocaml.markdown
tags/: haskell.html  netbsd.html  ocaml.html
templates/: default.html  footer.html  head.html  header.html  index.html  meta-data.html  post-list.html  post.html  tag.html
