cabal-version:       2.4
name:                oni-tech
version:             0.1.0
homepage:            https://github.com/oni-tech/oni-tech.github.io#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tim McGilchrist <timmcgil@gmail.com>
maintainer:          Tim McGilchrist <timmcgil@gmail.com>
copyright:           2018 Tim McGilchrist
category:            Web
build-type:          Simple
extra-source-files:  README.md


executable site
  main-is:             site.hs
  hs-source-dirs:       main
  default-language:    Haskell2010
  build-depends:       
                       base      >= 4.6  && < 5
                     , binary    >= 0.5  
                     , directory >= 1.2  
                     , filepath  >= 1.3  
                     , hakyll    ^>= 4.13
                     -- , hakyll-shortcut-links
                     , blaze-html
                     , lens
                     , time
                     , aeson
                     , lens-aeson
                     , containers
                     , pandoc    
                     , process   >= 1.6  
                     , text      >= 1.2  
    
